App component title updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="flex mx-auto h-screen w-auto justify-center items-center">
   <div>
+    <h1 class="text-3xl font-bold">{{title}}</h1>
     <h1 class="text-3xl font-semibold">Counter App</h1>
     <h4 class="text-2xl text-center">{{counter}}</h4>
     <div class="flex justify-around gap-4">
